# rtic

examples/qemu-mps3-an536/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
examples/qemu-mps3-an536/.cargo/: config.toml
examples/qemu-mps3-an536/src/: main.rs
rtic/: Cargo.toml  build.rs
rtic-macros/: Cargo.toml
rtic-macros/src/: lib.rs
rtic-macros/src/codegen/: bindings.rs
rtic-macros/src/codegen/bindings/: gicv3.rs
rtic-macros/src/syntax/: backend.rs
rtic-macros/src/syntax/backend/: gicv3.rs
rtic/src/: export.rs
rtic/src/export/: gicv3.rs
