[package]
edition = "2024"
name = "qemu-mps3-an536"
readme = "README.md"
version = "0.1.0"

[workspace]

[dependencies]
cortex-ar = { version = "0.3.0", features = ["critical-section-single-core"] }
cortex-r-rt = "0.2"
rtic = { path = "../../rtic", version = "2.0.0", features = ["gicv3-backend"] }
# rtic-monotonics = { path = "../../rtic-monotonics", version = "2.0.0", features = ["arm-virtual-timer"] }
semihosting = { version = "0.1.20", features = ["stdio"] }

# this lets you use `cargo fix`!
[[bin]]
name = "qemu-mps3-an536"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
